--- a/.github/workflows/main_codeguru20210922.yml
+++ b/.github/workflows/main_codeguru20210922.yml
@@ -1,62 +1,35 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - codeguru20210922
+name: hogehoge codeguru review
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
-  build:
+  review:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python version
-      uses: actions/setup-python@v1
+    - name: Checkout repository
+      uses: actions/checkout@v2
       with:
-        python-version: '3.8'
-
-    - name: Create and start virtual environment
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-
-    # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
-    - name: Upload artifact for deployment jobs
-      uses: actions/upload-artifact@v2
+        fetch-depth: 0   # Required
+   
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      if: ${{ always() }} # This ensures that your workflow runs successfully
       with:
-        name: python-app
-        path: |
-          .
-          !venv/
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-west-2
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: python-app
-          path: .
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'codeguru20210922'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_59cb91c68e224304a01eaee5208d3a92 }}
+    - name: AWS CodeGuru Reviewer Scanner
+      uses: aws-actions/codeguru-reviewer@v1.1
+      if: ${{ always() }} 
+      with:
+        build_path: target # build artifact(s) directory
+        s3_bucket: codeguru-reviewer-20210923-iwasa  # S3 Bucket with "codeguru-reviewer-*" prefix
+    
+    - name: Upload review result
+      if: ${{ github.event_name != 'push' }}
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: codeguru-results.sarif.json
