--- a/.github/workflows/main_codeguru20210922.yml
+++ b/.github/workflows/main_codeguru20210922.yml
@@ -25,7 +25,7 @@ jobs:
       uses: aws-actions/codeguru-reviewer@v1.1
       if: ${{ always() }} 
       with:
-        build_path: target # build artifact(s) directory
+        #build_path: target # build artifact(s) directory
         s3_bucket: codeguru-reviewer-20210923-iwasa  # S3 Bucket with "codeguru-reviewer-*" prefix
     
     - name: Upload review result
